# severin

./: .gitignore  CMakeLists.txt  README.md  test.level
assets/: basic.level
shaders/: mesh.frag  mesh.vert
src/: CMakeLists.txt  collision.h  engine.cpp  engine.h  entity.h  input.h  level.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  scene.cpp  scene.h  util.cpp  util.h  window_handler.cpp  window_handler.h  window_handler_sdl.cpp
